# vircon32-libretro

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Globals.cpp  Globals.hpp  LICENSE.md  Logging.cpp  Logging.hpp  README.md  Savestates.cpp  Savestates.hpp  VideoOutput.cpp  VideoOutput.hpp  emuelec_package.mk  libretro.cpp
ConsoleLogic/: ExternalInterfaces.hpp  V32CPU.cpp  V32Console.cpp  V32Console.hpp  V32GPU.cpp
embed-binaries/: CMakeLists.txt  LICENSE  README.md  embed-binaries.cmake
emuelec/: package.mk
tests/: test_invariant_Savestates.cpp
